// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThirdPillarStatusBox renders the "open third pillar" flow when user has no pillar active 1`] = `
<StatusBoxRow
  lines={
    Array [
      <Memo(MemoizedFormattedMessage)
        id="account.status.choice.pillar.third.missing.label"
      />,
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.third"
    />
  }
  showAction={true}
>
  <Link
    className="btn btn-primary"
    to="/3rd-pillar-flow"
  >
    <MemoizedFormattedMessage
      id="account.status.choice.pillar.third.missing.action"
    />
  </Link>
</StatusBoxRow>
`;

exports[`ThirdPillarStatusBox renders the "payment incomplete" flow when funds have not transferred yet 1`] = `
<StatusBoxRow
  lines={
    Array [
      <React.Fragment>
        <Memo(MemoizedFormattedMessage)
          id="account.status.choice.pillar.third.paymentIncomplete.label"
        />
        <InfoTooltip
          name="third-pillar-tooltip"
        >
          <Memo(MemoizedFormattedMessage)
            id="account.status.choice.pillar.third.paymentInfo"
          />
        </InfoTooltip>
      </React.Fragment>,
      <Memo(Connect(ThirdPillarYearToDateContribution)) />,
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.third"
    />
  }
  showAction={true}
>
  <Link
    className="btn btn-primary"
    to="/3rd-pillar-flow"
  >
    <MemoizedFormattedMessage
      id="account.status.choice.pillar.third.success.action"
    />
  </Link>
</StatusBoxRow>
`;

exports[`ThirdPillarStatusBox renders the "pick tuleva" flow when user has some other fund manager 1`] = `
<StatusBoxRow
  lines={
    Array [
      "Tuleva III Samba Pensionifond",
      <Memo(Connect(ThirdPillarYearToDateContribution)) />,
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.third"
    />
  }
  showAction={true}
>
  <Link
    className="btn btn-primary"
    to="/3rd-pillar-flow"
  >
    <MemoizedFormattedMessage
      id="account.status.choice.pillar.third.inactive.action"
    />
  </Link>
</StatusBoxRow>
`;

exports[`ThirdPillarStatusBox renders the "transfer incomplete" flow when user has several funds 1`] = `
<StatusBoxRow
  lines={
    Array [
      <Memo(MemoizedFormattedMessage)
        id="account.status.choice.pillar.third.transferIncomplete.label"
      />,
      <Memo(Connect(ThirdPillarYearToDateContribution)) />,
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.third"
    />
  }
  showAction={true}
>
  <Link
    className="btn btn-primary"
    to="/3rd-pillar-flow"
  >
    <MemoizedFormattedMessage
      id="account.status.choice.pillar.third.transferIncomplete.action"
    />
  </Link>
</StatusBoxRow>
`;

exports[`ThirdPillarStatusBox renders the success flow 1`] = `
<StatusBoxRow
  lines={
    Array [
      "Tuleva III Samba Pensionifond",
      <Memo(Connect(ThirdPillarYearToDateContribution)) />,
    ]
  }
  name={
    <Memo(MemoizedFormattedMessage)
      id="account.status.choice.pillar.third"
    />
  }
  ok={true}
  showAction={true}
>
  <Link
    className="btn btn-primary"
    to="/3rd-pillar-flow"
  >
    <MemoizedFormattedMessage
      id="account.status.choice.pillar.third.success.action"
    />
  </Link>
</StatusBoxRow>
`;
